--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kaoz-clients (0.0.2-1) unstable; urgency=low
+
+  * Upstream update, add sessions/ directory
+
+ -- Nicolas Iooss <nicolas.iooss@m4x.org>  Wed, 21 Aug 2013 16:28:10 +0200
+
 kaoz-clients (0.0.1-1) unstable; urgency=low
 
   * Initial release
