--- a/debian/install
+++ b/debian/install
@@ -4,4 +4,5 @@ nagios      usr/share/kaoz-clients
 nut-ups     usr/share/kaoz-clients
 pam         usr/share/kaoz-clients
 pipes       usr/share/kaoz-clients
+sessions    usr/share/kaoz-clients
 style       usr/share/kaoz-clients
